WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315302
[cleanup] Cache the inner flex base size in m_blockAxisSize so callers don't subtract border + padding
https://bugs.webkit.org/show_bug.cgi?id=315302
Summary
[cleanup] Cache the inner flex base size in m_blockAxisSize so callers don't ...
alan
Reported
2026-05-21 10:17:57 PDT
ssia
Attachments
Patch
(3.87 KB, patch)
2026-05-21 10:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(3.87 KB, patch)
2026-05-22 07:02 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-21 10:21:35 PDT
Created
attachment 479760
[details]
Patch
alan
Comment 2
2026-05-22 07:02:34 PDT
Created
attachment 479777
[details]
[fast-cq]Patch
EWS
Comment 3
2026-05-22 08:37:15 PDT
Committed
313734@main
(90ec9ef66e24): <
https://commits.webkit.org/313734@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479777
[details]
.
Radar WebKit Bug Importer
Comment 4
2026-05-22 08:38:12 PDT
<
rdar://problem/177715951
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug